--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li class="active"><a href="index.html">Inicio</a></li>
+                                            <li><a href="index.html">Inicio</a></li>
                                             <li><a href="portfolio.html">Portfolio</a></li>
                                             <li><a href="empresa.html">A Empresa</a></li>
-                                            <li><a href="contato.html">Contato</a></li>
+                                            <li class="active"><a href="contato.html">Contato</a></li>
                                         </ul>
                                     </nav>
                                 </div>
