--- a/portfolio.html
+++ b/portfolio.html
@@ -55,8 +55,8 @@
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li class="active"><a href="index.html">Inicio</a></li>
-                                            <li><a href="portfolio.html">Portfolio</a></li>
+                                            <li><a href="index.html">Inicio</a></li>
+                                            <li class="active"><a href="portfolio.html">Portfolio</a></li>
                                             <li><a href="empresa.html">A Empresa</a></li>
                                             <li><a href="contact.html">Contato</a></li>
                                         </ul>
