edicao na index

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
              <!-- Arrow -->
              <div class="thumb-content-box">
                 <div class="thumb-content">
-                    <h3>make an appointment now</h3>
-                    <a href="#"> <i class="fas fa-long-arrow-alt-right"></i></a>
+                    <h3>FAÇA UMA ORÇAMENTO AGORA</h3>
+                    <a href="contact.html"> <i class="fas fa-long-arrow-alt-right"></i></a>
                 </div>
             </div>
         </div>
