--- a/index.html
+++ b/index.html
@@ -84,38 +84,17 @@
                         <div class="row">
                             <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
                                 <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">with patrick potter</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our Hair Style make your look elegance</h1>
-                                </div>
+                                    <span>Com o melhor desempenho</span>                               </div>
                             </div>
                         </div>
                     </div>          
                 </div>
                 <!-- Single Slider -->
-                <div class="single-slider slider-height d-flex align-items-center">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-8 col-lg-9 col-md-11 col-sm-10">
-                                <div class="hero__caption">
-                                    <span data-animation="fadeInUp" data-delay="0.2s">with patrick potter</span>
-                                    <h1 data-animation="fadeInUp" data-delay="0.5s">Our Hair Style make your look elegance</h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>          
-                </div>
             </div>
             <!-- stroke Text -->
             <div class="stock-text">
-                <h2>Get More confident</h2>
-                <h2>Get More confident</h2>
-            </div>
-             <!-- Arrow -->
-             <div class="thumb-content-box">
-                <div class="thumb-content">
-                    <h3>FAÇA UMA ORÇAMENTO AGORA</h3>
-                    <a href="contact.html"> <i class="fas fa-long-arrow-alt-right"></i></a>
-                </div>
+                <h2>Máxima Performance</h2>
+                <h2>Máxima Performance</h2>
             </div>
         </div>
         <!-- slider Area End-->
